--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPs - Andrej Stojkovikj</title>
+  <title>SP - Andrej Stojkovikj</title>
   <link rel="stylesheet" href="styles.css" type="text/css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   
-  <div id="main">
-    <div>
+  <div id="main" class="flex justify-center items-center border-b-2">
+    <div class="">
       test
     </div>
+  </div>
+
+  <div>
+    test
   </div>
 
 </body>
