Created the most simple web page for the repo

--- a/index.html
+++ b/index.html
@@ -10,14 +10,36 @@
 </head>
 <body>
   
-  <div id="main" class="flex justify-center items-center border-b-2">
-    <div class="">
-      test
+  <div id="main" class="flex flex-col justify-center items-center border-b-2">
+    <div id="head" class="flex gap-4">
+      <div class="flex flex-col">
+        <div class="text-3xl font-semibold">Structured Programming</div>
+        <div class="text-md italic">
+          A repo for all of my solved coding problems for<br>
+          Structured Programming at FCSE.<br>
+          Written in <span class="text-neutral-600 font-bold text-[16px]">C</span> with pain and CLion.
+        </div>
+      </div>
+      <div class="text-2xl pt-1">
+        Faculty of<br>Computer Science<br>and Engineering
+      </div>
     </div>
-  </div>
 
-  <div>
-    test
+    <div class="text-lg flex gap-6 mt-4">
+      Quick start:
+
+      <div class="flex gap-3">
+        <a href="auditoriski" class="text-neutral-600 hover:text-neutral-800 hover:underline">
+          Auditoriski
+        </a>
+        <a href="labs" class="text-neutral-600 hover:text-neutral-800 hover:underline">
+          Labs
+        </a>
+        <a href="kolokvium" class="text-neutral-600 hover:text-neutral-800 hover:underline">
+          Kolokvium
+        </a>
+      </div>
+    </div>
   </div>
 
 </body>
