Made minor adjustments to html page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
   
   <div id="main" class="flex flex-col justify-center items-center border-b-2">
     <div id="head" class="flex gap-4">
-      <div class="flex flex-col">
+      <div class="flex flex-col py-2 justify-center">
         <div class="text-3xl font-semibold">Structured Programming</div>
-        <div class="text-md italic">
+        <div class="text-md italic leading-none pt-1">
           A repo for all of my solved coding problems for<br>
           Structured Programming at FCSE.<br>
-          Written in <span class="text-neutral-600 font-bold text-[16px]">C</span> with pain and CLion.
+          <div class="py-1">
+            Written in <span class="text-neutral-600 font-bold text-[16px]">C</span> with pain and CLion.
+          </div>
         </div>
       </div>
-      <div class="text-2xl pt-1">
+
+      <div class="h-full w-[2px] bg-neutral-300"></div>
+
+      <div class="flex items-center text-2xl leading-none">
         Faculty of<br>Computer Science<br>and Engineering
       </div>
     </div>
@@ -28,18 +33,30 @@
     <div class="text-lg flex gap-6 mt-4">
       Quick start:
 
-      <div class="flex gap-3">
+      <div class="flex gap-2">
+        <div class="text-neutral-600">|</div>
         <a href="auditoriski" class="text-neutral-600 hover:text-neutral-800 hover:underline">
           Auditoriski
         </a>
+        <div class="text-neutral-600">|</div>
         <a href="labs" class="text-neutral-600 hover:text-neutral-800 hover:underline">
           Labs
         </a>
+        <div class="text-neutral-600">|</div>
         <a href="kolokvium" class="text-neutral-600 hover:text-neutral-800 hover:underline">
           Kolokvium
         </a>
+        <div class="text-neutral-600">|</div>
       </div>
     </div>
+
+    <div id="scroll" class="absolute left-1/2 bottom-1 transform -translate-x-1/2 text-lg">
+      You can also just scroll. ↓
+    </div>
+  </div>
+
+  <div id="contents">
+    this is not the <b>content</b> you are looking for.
   </div>
 
 </body>
