--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="main" class="flex flex-col justify-center items-center border-b-2">
     <div id="head" class="flex gap-4">
       <div class="flex flex-col py-2 justify-center">
-        <div class="text-3xl font-semibold">Structured Programming</div>
+        <div class="text-3xl font-semibold">{Structured Programming}</div>
         <div class="text-md italic leading-none pt-1">
           A repo for all of my solved coding problems for<br>
           Structured Programming at FCSE.<br>
@@ -36,15 +36,15 @@
       <div class="flex gap-2">
         <div class="text-neutral-600">|</div>
         <a href="auditoriski" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          Auditoriski
+          auditoriski();
         </a>
         <div class="text-neutral-600">|</div>
         <a href="labs" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          Labs
+          labs();
         </a>
         <div class="text-neutral-600">|</div>
         <a href="kolokvium" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          Kolokvium
+          kolokvium();
         </a>
         <div class="text-neutral-600">|</div>
       </div>
@@ -55,12 +55,16 @@
 
       <div class="flex gap-2">
         <div class="text-neutral-600">|</div>
+        <a href="mailto:andrejstojkovikj@yahoo.com" class="text-neutral-600 hover:text-neutral-800 hover:underline">
+          mail();
+        </a>
+        <div class="text-neutral-600">|</div>
         <a href="https://github.com/AndrejStojkovic" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          Github
+          github();
         </a>
         <div class="text-neutral-600">|</div>
         <a href="https://github.com/AndrejStojkovic/SP" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          Repo
+          repo();
         </a>
         <div class="text-neutral-600">|</div>
       </div>
