--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           A repo for all of my solved coding problems for<br>
           Structured Programming at FCSE.<br>
           <div class="py-1">
-            Written in <span class="text-neutral-600 font-bold text-[16px]">C</span> with pain and CLion.
+            Written in <span class="text-red-700 font-bold text-[16px]">C</span> with pain and love <span class="not-italic">❤️</span>.
           </div>
         </div>
       </div>
