Fixes and improvements

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
 
       <div class="flex gap-2">
         <div class="text-neutral-600">|</div>
+        <a href="kolokvium" class="text-neutral-600 hover:text-neutral-800 hover:underline">
+          excercises();
+        </a>
+        <div class="text-neutral-600">|</div>
         <a href="labs" class="text-neutral-600 hover:text-neutral-800 hover:underline">
           labs();
         </a>
         <div class="text-neutral-600">|</div>
         <a href="kolokvium" class="text-neutral-600 hover:text-neutral-800 hover:underline">
-          kolokvium();
+          exams();
         </a>
         <div class="text-neutral-600">|</div>
       </div>
